# API-Reservaciones

./: .env.example  .gitignore  AGENTS.md  REAL_TESTING_SETUP.md  TESTING_SUMMARY.md  check_real_db.py  crear_reserva.json  demo_evidence.py  estructura.txt  locustfile.py  pendientes_estatus.md  plan_de_accion.md  pyproject.toml  pytest.ini  reservation_payload_example.json  ruff_errors.txt  ruff_errors_v2.txt
.claude/: settings.local.json
.github/workflows/: test.yml
app/: config.py  main.py
app/api/: dependencies.py  deps.py  endpoints.py
docs/: auditoria_tolerancia_fallos.md  slice-report.md  status_integrations.md  traceability_matrix.md
prompts/: 00-orquestador.md  01-analisis.md  02-backend.md  03-analisis_datos.md  04-documentador.md  05-qa.md  06-phpTopython.md  07-pr_manager.md  analisis_orquestador.md  reglas_negocio.md  tablas_cro_database.md
scripts/: check_db.py  drop_all.py  fix_db.py  reset_db.py  seed_db.py
spec/: adr-001-adapter-pattern.md  adr-002-distributed-failure-handling.md  analisis_timezones.md  api-contracts.md  architecture.md  prd-reservation-slice.md  requirements_traceability.md  resumen_actividad_20012026.md  state-machine.md  test-report-2026-01-15-receipt-snapshot.md  test-report-2026-01-15-sql-validations.md  test-report-2026-01-15.md
tests/: conftest.py  test_connection_example.py  test_create_reservation_endpoint.py  test_fallback_manual.py  test_pay_reservation_endpoint.py  test_qa_suite.py  test_receipt_endpoint.py  test_reservation_flow.py  test_schemas.py  test_webhook_stripe.py  test_worker_book_supplier.py
(+157 files in other folders)
